--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -144,6 +144,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comment.cs">
+      <DependentUpon>emlakmvc.tt</DependentUpon>
+    </Compile>
     <Compile Include="emlakmvc.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -158,9 +161,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>emlakmvc.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Entity2.cs">
-      <DependentUpon>emlakmvc.tt</DependentUpon>
     </Compile>
     <Compile Include="Ilan.cs">
       <DependentUpon>emlakmvc.tt</DependentUpon>
