--- a/Data/Web.config
+++ b/Data/Web.config
@@ -11,6 +11,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    
+    <pages validateRequest="false"/>
+    <httpRuntime requestValidationMode="2.0"/>
+    
   </system.web>
   <connectionStrings>
     <add name="emlakmvcContainer" connectionString="metadata=res://*/emlakmvc.csdl|res://*/emlakmvc.ssdl|res://*/emlakmvc.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUSEYIN;initial catalog=emlakmvc;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
