--- a/Admin/Admin.csproj
+++ b/Admin/Admin.csproj
@@ -413,6 +413,7 @@
     <Compile Include="Controllers\IlanDetaysController.cs" />
     <Compile Include="Controllers\IlansController.cs" />
     <Compile Include="Controllers\KategorisController.cs" />
+    <Compile Include="Controllers\LogsController.cs" />
     <Compile Include="Controllers\SikayetsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\UserTypesController.cs" />
@@ -475,6 +476,8 @@
     <Content Include="Views\Ilans\Details.cshtml" />
     <Content Include="Views\Ilans\Edit.cshtml" />
     <Content Include="Views\Ilans\Index.cshtml" />
+    <Content Include="Views\Logs\Index.cshtml" />
+    <Content Include="Views\Logs\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
