--- a/Web/Web.config
+++ b/Web/Web.config
@@ -63,7 +63,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="emlakmvcContainer" connectionString="metadata=res://*/emlakmvc.csdl|res://*/emlakmvc.ssdl|res://*/emlakmvc.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUSEYIN;initial catalog=emlakmvc;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="emlakmvcContainer" connectionString="metadata=res://*/emlakmvc.csdl|res://*/emlakmvc.ssdl|res://*/emlakmvc.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUSEYIN;initial catalog=emlakk;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
