--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -117,15 +117,19 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\CreditController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IlanlarController.cs" />
+    <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Filters\MemberAuthorize.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\ImageHelper.cs" />
+    <Compile Include="Helpers\UserHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CreditViewModel.cs" />
     <Compile Include="ViewModel\MailViewModel.cs" />
@@ -151,6 +155,14 @@
     <Content Include="Views\Contact\Fail.cshtml" />
     <Content Include="Views\Contact\Success.cshtml" />
     <Content Include="Views\Credit\Index.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Cart\PayForm.cshtml" />
+    <Content Include="Views\Cart\Success.cshtml" />
+    <Content Include="Views\Credit\Success.cshtml" />
+    <Content Include="Views\Credit\List.cshtml" />
+    <Content Include="Views\Projects\Index.cshtml" />
+    <Content Include="Views\User\LoginForm.cshtml" />
+    <Content Include="Views\Shared\CardForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -163,7 +175,6 @@
     <Folder Include="Models\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Home\" />
-    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
