--- a/Data/Web.config
+++ b/Data/Web.config
@@ -11,6 +11,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="on"/>
     <pages validateRequest="false" />
     <httpRuntime requestValidationMode="2.0" />
   </system.web>
